@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
 #
 
+2005-12-07 16:41:45 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-61
+
+    Summary:
+      web, downgrade to HTTP 1.0; now cookies always include the path
+    Revision:
+      itools--main--0.11--patch-61
+
+
+    modified files:
+     Changelog web/response.py
+
+
 2005-11-01 07:18:55 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-60
 
     Summary:
